--- a/changelog
+++ b/changelog
@@ -5,6 +5,8 @@ cython (0.19+git51-g3078752-1) unstable; urgency=low
   * debian/upstream
     - added to facilitate referencing etc.
     - added to be installed among docs
+  * debian/copyright
+    - machine readable now (and correct license Apache-2.0)
 
   [ Jakub Wilk ]
   * Use canonical URIs for Vcs-* fields.
