adjusting last changelog for fresh 0.20 release
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@10378 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/changelog
+++ b/changelog
@@ -1,8 +1,8 @@
-cython (0.20~b1+git19-ga261a91-1) unstable; urgency=low
+cython (0.20-1) unstable; urgency=low
 
-  * Fresh upstream snapshot of the upcoming beta-release
+  * Fresh upstream release
 
- -- Yaroslav Halchenko <debian@onerussian.com>  Sat, 11 Jan 2014 12:49:58 -0500
+ -- Yaroslav Halchenko <debian@onerussian.com>  Sun, 19 Jan 2014 00:07:47 -0500
 
 cython (0.19.2+git5-g0c6fdf0-1) unstable; urgency=low
 
