--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+cython (0.20-2) unstable; urgency=low
+
+  * signed-char.patch: Fix broken test when char type is unsigned
+
+ -- Julian Taylor <jtaylor.debian@googlemail.com>  Wed, 22 Jan 2014 18:58:54 +0100
+
 cython (0.20-1) unstable; urgency=low
 
   * Fresh upstream release
