--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+cython (0.20-4) UNRELEASED; urgency=low
+
+  * add debian version to watermark in generated source files
+
+ -- Julian Taylor <jtaylor.debian@googlemail.com>  Tue, 11 Feb 2014 23:08:33 +0100
+
 cython (0.20-3) unstable; urgency=low
 
   * fix-skip-tests.patch: prevent python3.4 from running a disabled test
