--- a/changelog
+++ b/changelog
@@ -1,6 +1,7 @@
 cython (0.20.1-1) unstable; urgency=low
 
   * Fresh upstream bugfix release
+    - includes all the .patch'es (dropping from debian/patches)
 
  -- Yaroslav Halchenko <debian@onerussian.com>  Wed, 12 Feb 2014 13:20:05 -0500
 
